src/compiler/RyParser.java
package compiler;// Generated from Ry.g4 by ANTLR 4.5
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, LITERAL=5, COMMA=6, SEMICOLON=7, CRLF=8, 
		CLASS=9, END=10, DEF=11, IF=12, ELSE=13, ELSIF=14, UNLESS=15, WHILE=16, 
		RETRY=17, BREAK=18, FOR=19, TRUE=20, FALSE=21, PLUS=22, MINUS=23, MUL=24, 
		DIV=25, MOD=26, EXP=27, ASSIGN=28, PLUS_ASSIGN=29, MINUS_ASSIGN=30, MUL_ASSIGN=31, 
		DIV_ASSIGN=32, MOD_ASSIGN=33, EXP_ASSIGN=34, EQUAL=35, NOT_EQUAL=36, GREATER=37, 
		LESS=38, LESS_EQUAL=39, GREATER_EQUAL=40, AND=41, OR=42, NOT=43, IN=44, 
		DOTS=45, LEFT_RBRACKET=46, RIGHT_RBRACKET=47, LEFT_SBRACKET=48, RIGHT_SBRACKET=49, 
		NIL=50, RETURN=51, NEW=52, SL_COMMENT=53, ML_COMMENT=54, WS=55, INT=56, 
		FLOAT=57, CONSTANT=58, ID=59;
	public static final int
		RULE_prog = 0, RULE_expression_list = 1, RULE_expression = 2, RULE_class_definition = 3, 
		RULE_super_class_name = 4, RULE_class_name = 5, RULE_class_body = 6, RULE_object_definition = 7, 
		RULE_function_definition = 8, RULE_function_header = 9, RULE_return_statement = 10, 
		RULE_function_body = 11, RULE_function_name = 12, RULE_function_params = 13, 
		RULE_function_definition_param_list = 14, RULE_function_definition_param_id = 15, 
		RULE_function_call = 16, RULE_class_function_call = 17, RULE_function_call_param_list = 18, 
		RULE_function_call_params = 19, RULE_function_param = 20, RULE_function_call_unnamed_param = 21, 
		RULE_function_call_named_param = 22, RULE_all_result = 23, RULE_while_statement = 24, 
		RULE_for_statement = 25, RULE_elsif_statement = 26, RULE_if_elsif_statement = 27, 
		RULE_if_statement = 28, RULE_unless_statement = 29, RULE_all_assignment = 30, 
		RULE_cond_expression = 31, RULE_statement_body = 32, RULE_statement_expression_list = 33, 
		RULE_assignment = 34, RULE_dynamic_assignment = 35, RULE_int_assignment = 36, 
		RULE_float_assignment = 37, RULE_string_assignment = 38, RULE_dynamic_result = 39, 
		RULE_dynamic = 40, RULE_function_call_assignment = 41, RULE_int_result = 42, 
		RULE_float_result = 43, RULE_string_result = 44, RULE_comparison_list = 45, 
		RULE_comparison = 46, RULE_comp_var = 47, RULE_lvalue = 48, RULE_rvalue = 49, 
		RULE_literal_t = 50, RULE_float_t = 51, RULE_int_t = 52, RULE_bool_t = 53, 
		RULE_nil_t = 54, RULE_terminator = 55, RULE_else_token = 56, RULE_crlf = 57, 
		RULE_var_class = 58, RULE_var_instance = 59, RULE_var_global = 60, RULE_var = 61, 
		RULE_constant = 62;
	public static final String[] ruleNames = {
		"prog", "expression_list", "expression", "class_definition", "super_class_name", 
		"class_name", "class_body", "object_definition", "function_definition", 
		"function_header", "return_statement", "function_body", "function_name", 
		"function_params", "function_definition_param_list", "function_definition_param_id", 
		"function_call", "class_function_call", "function_call_param_list", "function_call_params", 
		"function_param", "function_call_unnamed_param", "function_call_named_param", 
		"all_result", "while_statement", "for_statement", "elsif_statement", "if_elsif_statement", 
		"if_statement", "unless_statement", "all_assignment", "cond_expression", 
		"statement_body", "statement_expression_list", "assignment", "dynamic_assignment", 
		"int_assignment", "float_assignment", "string_assignment", "dynamic_result", 
		"dynamic", "function_call_assignment", "int_result", "float_result", "string_result", 
		"comparison_list", "comparison", "comp_var", "lvalue", "rvalue", "literal_t", 
		"float_t", "int_t", "bool_t", "nil_t", "terminator", "else_token", "crlf", 
		"var_class", "var_instance", "var_global", "var", "constant"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'.'", "'@@'", "'@'", "'$'", null, "','", "';'", "'\n'", "'class'", 
		"'end'", "'def'", "'if'", "'else'", "'elsif'", "'unless'", "'while'", 
		"'retry'", "'break'", "'for'", "'true'", "'false'", "'+'", "'-'", "'*'", 
		"'/'", "'%'", "'**'", "'='", "'+='", "'-='", "'*='", "'/='", "'%='", "'**='", 
		"'=='", "'!='", "'>'", "'<'", "'<='", "'>='", null, null, null, "'in'", 
		"'..'", "'('", "')'", "'['", "']'", "'nil'", "'return'", "'new'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, "LITERAL", "COMMA", "SEMICOLON", "CRLF", 
		"CLASS", "END", "DEF", "IF", "ELSE", "ELSIF", "UNLESS", "WHILE", "RETRY", 
		"BREAK", "FOR", "TRUE", "FALSE", "PLUS", "MINUS", "MUL", "DIV", "MOD", 
		"EXP", "ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", 
		"MOD_ASSIGN", "EXP_ASSIGN", "EQUAL", "NOT_EQUAL", "GREATER", "LESS", "LESS_EQUAL", 
		"GREATER_EQUAL", "AND", "OR", "NOT", "IN", "DOTS", "LEFT_RBRACKET", "RIGHT_RBRACKET", 
		"LEFT_SBRACKET", "RIGHT_SBRACKET", "NIL", "RETURN", "NEW", "SL_COMMENT", 
		"ML_COMMENT", "WS", "INT", "FLOAT", "CONSTANT", "ID"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Ry.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public Expression_listContext expression_list() {
			return getRuleContext(Expression_listContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RyListener ) ((RyListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RyListener ) ((RyListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			expression_list(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expression_listContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminatorContext terminator() {
			return getRuleContext(TerminatorContext.class,0);
		}
		public Expression_listContext expression_list() {
			return getRuleContext(Expression_listContext.class,0);
		}
		public Expression_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RyListener ) ((RyListener)listener).enterExpression_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RyListener ) ((RyListener)listener).exitExpression_list(this);
		}
	}

	public final Expression_listContext expression_list() throws RecognitionException {
		return expression_list(0);
	}

	private Expression_listContext expression_list(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Expression_listContext _localctx = new Expression_listContext(_ctx, _parentState);
		Expression_listContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_expression_list, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			switch (_input.LA(1)) {
			case T__1:
			case T__2:
			case T__3:
			case LITERAL:
			case CLASS:
			case DEF:
			case IF:
			case UNLESS:
			case WHILE:
			case FOR:
			case TRUE:
			case FALSE:
			case NOT:
			case LEFT_RBRACKET:
			case NIL:
			case RETURN:
			case INT:
			case FLOAT:
			case CONSTANT:
			case ID:
				{
				setState(129);
				expression(0);
				setState(130);
				terminator(0);
				}
				break;
			case SEMICOLON:
			case CRLF:
				{
				setState(132);
				terminator(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(141);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Expression_listContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_expression_list);
					setState(135);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(136);
					expression(0);
					setState(137);
					terminator(0);
					}
					} 
				}
				setState(143);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public Token cond_modifier;
		public Class_definitionContext class_definition() {
			return getRuleContext(Class_definitionContext.class,0);
		}
		public Function_definitionContext function_definition() {
			return getRuleContext(Function_definitionContext.class,0);
		}
		public Function_callContext function_call() {
			return getRuleContext(Function_callContext.class,0);
		}
		public Class_function_callContext class_function_call() {
			return getRuleContext(Class_function_callContext.class,0);
		}
		public For_statementContext for_statement() {
			return getRuleContext(For_statementContext.class,0);
		}
		public While_statementContext while_statement() {
			return getRuleContext(While_statementContext.class,0);
		}
		public If_statementContext if_statement() {
			return getRuleContext(If_statementContext.class,0);
		}
		public Unless_statementContext unless_statement() {
			return getRuleContext(Unless_statementContext.class,0);
		}
		public Comparison_listContext comparison_list() {
			return getRuleContext(Comparison_listContext.class,0);
		}
		public RvalueContext rvalue() {
			return getRuleContext(RvalueContext.class,0);
		}
		public Return_statementContext return_statement() {
			return getRuleContext(Return_statementContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode IF() { return getToken(RyParser.IF, 0); }
		public TerminalNode UNLESS() { return getToken(RyParser.UNLESS, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RyListener ) ((RyListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RyListener ) ((RyListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_expression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(145);
				class_definition();
				}
				break;
			case 2:
				{
				setState(146);
				function_definition();
				}
				break;
			case 3:
				{
				setState(147);
				function_call();
				}
				break;
			case 4:
				{
				setState(148);
				class_function_call();
				}
				break;
			case 5:
				{
				setState(149);
				for_statement();
				}
				break;
			case 6:
				{
				setState(150);
				while_statement();
				}
				break;
			case 7:
				{
				setState(151);
				if_statement();
				}
				break;
			case 8:
				{
				setState(152);
				unless_statement();
				}
				break;
			case 9:
				{
				setState(153);
				comparison_list();
				}
				break;
			case 10:
				{
				setState(154);
				rvalue(0);
				}
				break;
			case 11:
				{
				setState(155);
				return_statement();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(166);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(164);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(158);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(159);
						((ExpressionContext)_localctx).cond_modifier = match(IF);
						setState(160);
						expression(7);
						}
						break;
					case 2:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(161);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(162);
						((ExpressionContext)_localctx).cond_modifier = match(UNLESS);
						setState(163);
						expression(5);
						}
						break;
					}
					} 
				}
				setState(168);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Class_definitionContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(RyParser.CLASS, 0); }
		public Class_nameContext class_name() {
			return getRuleContext(Class_nameContext.class,0);
		}
		public List<TerminalNode> CRLF() { return getTokens(RyParser.CRLF); }
		public TerminalNode CRLF(int i) {
			return getToken(RyParser.CRLF, i);
		}
		public Class_bodyContext class_body() {
			return getRuleContext(Class_bodyContext.class,0);
		}
		public TerminalNode END() { return getToken(RyParser.END, 0); }
		public Super_class_nameContext super_class_name() {
			return getRuleContext(Super_class_nameContext.class,0);
		}
		public Class_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RyListener ) ((RyListener)listener).enterClass_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RyListener ) ((RyListener)listener).exitClass_definition(this);
		}
	}

	public final Class_definitionContext class_definition() throws RecognitionException {
		Class_definitionContext _localctx = new Class_definitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_class_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			match(CLASS);
			setState(170);
			class_name();
			setState(173);
			_la = _input.LA(1);
			if (_la==LESS) {
				{
				setState(171);
				match(LESS);
				setState(172);
				super_class_name();
				}
			}

			setState(175);
			match(CRLF);
			setState(176);
			class_body();
			setState(178);
			_la = _input.LA(1);
			if (_la==CRLF) {
				{
				setState(177);
				match(CRLF);
				}
			}

			setState(180);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Super_class_nameContext extends ParserRuleContext {
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public Super_class_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_super_class_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RyListener ) ((RyListener)listener).enterSuper_class_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RyListener ) ((RyListener)listener).exitSuper_class_name(this);
		}
	}

	public final Super_class_nameContext super_class_name() throws RecognitionException {
		Super_class_nameContext _localctx = new Super_class_nameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_super_class_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(182);
			constant();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_nameContext extends ParserRuleContext {
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public Class_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RyListener ) ((RyListener)listener).enterClass_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RyListener ) ((RyListener)listener).exitClass_name(this);
		}
	}

	public final Class_nameContext class_name() throws RecognitionException {
		Class_nameContext _localctx = new Class_nameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_class_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184);
			constant();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_bodyContext extends ParserRuleContext {
		public Expression_listContext expression_list() {
			return getRuleContext(Expression_listContext.class,0);
		}
		public Class_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RyListener ) ((RyListener)listener).enterClass_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RyListener ) ((RyListener)listener).exitClass_body(this);
		}
	}

	public final Class_bodyContext class_body() throws RecognitionException {
		Class_bodyContext _localctx = new Class_bodyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_class_body);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186);
			expression_list(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Object_definitionContext extends ParserRuleContext {
		public Class_nameContext class_name() {
			return getRuleContext(Class_nameContext.class,0);
		}
		public TerminalNode NEW() { return getToken(RyParser.NEW, 0); }
		public TerminalNode LEFT_RBRACKET() { return getToken(RyParser.LEFT_RBRACKET, 0); }
		public Function_call_paramsContext function_call_params() {
			return getRuleContext(Function_call_paramsContext.class,0);
		}
		public TerminalNode RIGHT_RBRACKET() { return getToken(RyParser.RIGHT_RBRACKET, 0); }
		public Object_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_object_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RyListener ) ((RyListener)listener).enterObject_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RyListener ) ((RyListener)listener).exitObject_definition(this);
		}
	}

	public final Object_definitionContext object_definition() throws RecognitionException {
		Object_definitionContext _localctx = new Object_definitionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_object_definition);
		try {
			setState(204);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(188);
				class_name();
				setState(189);
				match(T__0);
				setState(190);
				match(NEW);
				setState(191);
				match(LEFT_RBRACKET);
				setState(192);
				function_call_params(0);
				setState(193);
				match(RIGHT_RBRACKET);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(195);
				class_name();
				setState(196);
				match(T__0);
				setState(197);
				match(NEW);
				setState(199);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(198);
					match(LEFT_RBRACKET);
					}
					break;
				}
				setState(202);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(201);
					match(RIGHT_RBRACKET);
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
